--- a/Roadmap/Week-1/Day-1/day1.css
+++ b/Roadmap/Week-1/Day-1/day1.css
@@ -2,15 +2,16 @@
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     box-sizing: border-box;
     color: #484848;
+    text-align: justify;
 }
 body{
-    padding: 5px 50px;
+    padding: 5px 2%;
 }
 .nav-bar{
     display: flex;
     align-items: center;
     justify-content: space-between ;
-    padding-right: 50px;
+    /* padding-right: 50px; */
 }
 .nav-title{
     display: flex;
@@ -28,9 +29,18 @@ body{
     flex-wrap: wrap;
     flex-direction: row;
 }
+.nav-list-item{
+    padding: 5px;
+}
 .nav-list-item a{
     text-decoration: none;
     font-size: 1.2rem;
+}
+.nav-list-item a:hover{
+    color: darkgreen;
+    border-radius: 10px;
+    background-color: #d3ffc6;
+    padding: 8px;
 }
 .image-section{
     display: flex;
@@ -44,6 +54,7 @@ body{
     padding: 25px 30px;
     text-align: center;
     margin: auto;
+    margin-bottom: 30px;
 }
 .contact-form h2{
     font-size: 1.7rem;
@@ -120,8 +131,87 @@ tr:hover{
 
 .lists{
     display: flex;
+    flex-wrap:wrap ;
     border: 1px solid black;
     padding: 10px;
 }
 
+.nav-list-item:hover{
+    background-color: white;
+}
+.list-of-navs{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    position: fixed;
+    right: 0;
+    top: 50%;
+}
+.list-of-navs a{
+    text-align: center;
+    background-color: #d3ffc6;
+    height: 50px;
+    width: 50px;
+    margin: auto;
+}
+.grid{
+    display: grid;
+    gap: 2px;
+}
+.grid-1{
+    grid-template-columns: 33% 33% 33% ;
+}
+.grid-1 div{
+    background-color: rgb(250, 8, 8);
+    
+}
+.grid div{
+    color: white;
+    padding: 5px;
+    text-align: center;
+    border-radius: 10px;
+}
+.grid-2 div{
+    background-color: rgb(117, 232, 34);
+}
+.grid-2{
+    grid-template-columns: 50px 100px minmax(100px, auto);
+}
+.product-container{
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+.product-container div img{
+    width: 100%;
+    border-radius: 10px;
+    height: 100%;
+    margin: 10px
+}
+.layout{
+    width: 100%;
+    height: 100vh;
+    gap: 20px;
+    display: grid;
+    grid-template-columns: 30% 70%;
+}
+@media screen and (max-width: 644px){
+    .nav-bar{
+        width: 100%;
+        align-self: center;
+        flex-direction: column;
+        justify-content: center;
+    }
+    #nav-list{
+        background-color: #d3ffc6;
+        display: flex;
+        flex-wrap: wrap ;
+        flex-direction: row;
+        padding: 2px;
+        font-size: 0.5rem;
+    }
+    .nav-list-item a{
+        width: 100%;
+    }
+}
 
