Updated portfolio with more responsiveness

--- a/Roadmap/Week-1/Day 3/Task/day3.css
+++ b/Roadmap/Week-1/Day 3/Task/day3.css
@@ -39,3 +39,10 @@ footer{
     color: white;
     padding: 1rem;
 }
+
+@media (max-width : 600px){
+    body{
+        display: flex;
+        flex-direction: column;
+    }
+}
