--- a/Roadmap/Week-1/Day-1/New Day 1/portfolio.css
+++ b/Roadmap/Week-1/Day-1/New Day 1/portfolio.css
@@ -1,8 +1,11 @@
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: optima;
+    /* font-family: optima; */
+    font-family:  "Lexend";
+    text-align: justify;
 }
 body{
     background-color: #212121;
@@ -14,7 +17,7 @@ nav{
     display: flex;
     justify-content: space-between;
     padding: 5px 20px;
-    margin: 10px;
+    margin: 20px 30px;
     border-radius: 25px;
 }
 nav .title span{
@@ -43,7 +46,7 @@ nav p{
     flex-direction: row;
     gap: 20px;
     justify-content: space-between;
-
+    width: 88%;
 }
 .text-intro{
     display: flex;
@@ -53,18 +56,36 @@ nav p{
     margin-top: 2rem;
 }
 .text-intro span{
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: "Pacifico", cursive, sans-serif;
     color:#00d9ff;
     font-size: 2rem;
 }
+.image{
+    display: flex;
+    justify-content: center;
+}
 .intro .image img{
     border-radius: 50%;
-
+    height: auto;
+    width: 60%;
+}
+.intro-btn{
+    padding: 10px;
+    border-radius: 25px;
+    width: 100px;
+    text-align: center;
+    margin-top: 15px;
+}
+.intro-btn:hover{
+    background-color: gray;
+    border: 1.5px solid gray;
+    color: whitesmoke;
 }
 .about{
     display: flex;
     flex-direction: column;
     padding-top: 30px;
+    padding-bottom: 30px;
     background:linear-gradient(135deg, #00ffff, #4169e1);
 }
 .about h1{
@@ -73,22 +94,67 @@ nav p{
     padding: 10px;
     font-size: 3rem;
 }
-.about p{
-    margin:2% 12%;
-    font-size: 1.5rem;
+.about-flex{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.about .para{
+    width: 45%;
+    padding:2% 5%;
+    font-size: 1.2rem;
+    color: #212121;
 }
 .skill-grid{
-    width: 70%;
+    width: 40%;
     display: flex;
     flex-direction: column;
-    
     padding: 10px;
+    justify-content: space-between;
+    /* margin: auto; */
+    padding: 2%;
+}
+.skill-grid h2{
+    color: #212121;
+    margin: 5px 0px;
+}
+.container{
+    /* display: flex;
+    flex-direction: row;
+    flex-wrap: wrap; */
+    display: grid;
+    grid-template-columns: 2fr 3fr  ;
+    align-items:flex-start;
+    /* background-color: #fff;
+    gap: 10px; */
+}
+.html-skill, .react-skill, .node-skill, .css-skill{
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    height: 20px;
+    /* border-radius: 25px; */
+    background-color: black;
+    padding: 1px 8px;
+    font-weight: 200;
+    font-size: 0.5rem;
+    color:#00ffff;
 }
 .html-skill{
     width: 80%;
-    height: 10px;background-color: azure;
-    background-color: #212121;
+} 
+.css-skill{
+    width: 80%;
 }
+.react-skill{
+    width: 75%;
+} 
+.node-skill{
+    width: 70%;
+} 
+
 .projects{
     display: flex;
     flex-direction: column;
@@ -101,8 +167,6 @@ nav p{
     position: relative;
     animation: moveBox 4s infinite ;
 }
-.marquee span { display: inline-block; padding-left: 100%; animation: scrollText 10s linear infinite; } @keyframes scrollText { from { transform: translateX(0); } to { transform: translateX(-100%); } }
-@keyframes moveBox { from { left: 0; } to { left: 300px; } }
 .projects .project-list{
     display: flex;
     flex-direction: column;
@@ -112,7 +176,7 @@ nav p{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    height: 60vh;
+    height: 100%;
     border: 1px solid gray;
     border-radius: 15px;
     margin: 2%;
@@ -151,6 +215,7 @@ nav p{
 
 .desc ul li{
     padding: 5px 0px;
+    font-size: 0.8rem;
 }
 .contact-form{
     color: #212121;
@@ -230,6 +295,16 @@ footer{
         flex-direction: column;
     }
     .items img{
+        width: 100%;
+    }
+    .contact-form button{
+        width: 100%;
+    }
+    .about-flex{
+        flex-direction: column;
+    }
+    .about .para{
+        font-size: 0.8rem;
         width: 100%;
     }
 }
