Added About section

--- a/Roadmap/Week-1/Day 4/style.css
+++ b/Roadmap/Week-1/Day 4/style.css
@@ -111,6 +111,7 @@ nav a{
     display: flex;
     flex-direction: row;
     gap: 45px;
+    /* flex-wrap: wrap; */
     justify-content: space-evenly;
 }
 .about .grid-item{
@@ -133,10 +134,12 @@ nav a{
     flex-basis: 25%;
     flex-grow:0;
     flex-shrink: 0;
+    padding: 10px;
 }
 .about img{
-    height: 100%;
-    width: 100%;
+    max-height:70%;
+    max-width: 90%;
+    /* display: block; */
 }
 @media (max-width:682px){
     .hamburger-icon{
