--- a/Roadmap/Week-1/Day 5/style.css
+++ b/Roadmap/Week-1/Day 5/style.css
@@ -30,8 +30,14 @@ body{
     color: white;
     font-size: 1.5rem;
 }
+/* .container .incr:disabled{
+    background-color: #c0c0c0;
+    color: #666;
+    cursor: not-allowed;
+    opacity: 0.9;
+} */
 .container .decr{
-    background-color: rgb(255, 48, 48);
+    background-color: #ff3030;
 }
 .internal-div{
     display: flex;
